package com.zsx.design.pattern.simple.factory;

public interface IShape {

    String draw();
}
